Velcro test First SandBox/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Capabilities__c</fullName>
        <description>Converting Capabilities, Etc.</description>
        <inlineHelpText>What are they able to do?</inlineHelpText>
        <label>Capabilities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChannelManager__c</fullName>
        <formula>Referral_Account_Channel__r.Owner.LastName</formula>
        <label>Channel Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_ManagerEMAIL__c</fullName>
        <label>Channel Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor_Level__c</fullName>
        <label>Distributor Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Preferred Converter</fullName>
                </value>
                <value>
                    <fullName>Platinum - Multi Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Served__c</fullName>
        <label>Market Served</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market 1</fullName>
                </value>
                <value>
                    <fullName>Market 2</fullName>
                </value>
                <value>
                    <fullName>Market 3</fullName>
                </value>
                <value>
                    <fullName>Market 4</fullName>
                </value>
                <value>
                    <fullName>Market 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Markets_Customers_Served__c</fullName>
        <label>Markets/Customers Served</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>All Markets</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Architects</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Awning</fullName>
                </value>
                <value>
                    <fullName>Bindery</fullName>
                </value>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Crafters</fullName>
                </value>
                <value>
                    <fullName>Custom Fabrication</fullName>
                </value>
                <value>
                    <fullName>Data Centers</fullName>
                </value>
                <value>
                    <fullName>Defense</fullName>
                </value>
                <value>
                    <fullName>Displays</fullName>
                </value>
                <value>
                    <fullName>Drapery</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Engineering Services</fullName>
                </value>
                <value>
                    <fullName>Exhibits</fullName>
                </value>
                <value>
                    <fullName>Fabricators</fullName>
                </value>
                <value>
                    <fullName>Fortune 500</fullName>
                </value>
                <value>
                    <fullName>Framing / Frame Stores</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Members__c</fullName>
        <label>Number of Members</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Referral_Account_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Account (Channel)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Partner_Type_1__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Account_Phone__c</fullName>
        <formula>Referral_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Contact_Email__c</fullName>
        <description>Works for the Distributor - gets notified when new Campaign Member added</description>
        <label>Referral Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <label>SBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Personal Care</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_of_Operation__c</fullName>
        <label>State of Operation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Members__c</fullName>
        <formula>NumberOfContacts +  NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor_Id__c</fullName>
        <externalId>true</externalId>
        <label>Campaign Monitor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor__c</fullName>
        <formula>IF( wbsendit__Campaign_Monitor_Id__c == null,
HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;LinkCampaign?Id=&quot; + Id , &quot;Link to Campaign Monitor&quot;, &quot;_self&quot;),
HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;SendItReports?campaignId=&quot; + wbsendit__Campaign_Monitor_Id__c + &quot;&amp;reportId=1&quot;, &quot;View Report&quot;, &quot;_self&quot;) + &quot; &quot; + HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;Disconnect?Id=&quot; + Id, &quot;[Disconnect]&quot;, &quot;_self&quot;))</formula>
        <inlineHelpText>Connect this Salesforce Campaign to sent campaigns in Campaign Monitor. Use this to manage campaign reports from within Salesforce. Send It will add any members it finds in Campaign Monitor to this campaign.</inlineHelpText>
        <label>Campaign Monitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email_Text_Version__c</fullName>
        <description>Text version of the email sent.</description>
        <inlineHelpText>Text version of the email sent.</inlineHelpText>
        <label>Email Text Version</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email_Web_Version__c</fullName>
        <description>Web version of the email campaign.</description>
        <inlineHelpText>Web version of the email campaign.</inlineHelpText>
        <label>Email Web Version</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Bounced__c</fullName>
        <description>Number of bounced emails for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of bounced emails for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Clicks__c</fullName>
        <description>Number of clicks for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of clicks for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Forwards__c</fullName>
        <description>Number of forwarded emails for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of forwarded emails for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Forwards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Likes__c</fullName>
        <description>Number of likes for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of likes for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Mentions__c</fullName>
        <description>Number of &quot;Mentions&quot; for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of &quot;Mentions&quot; for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Mentions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Opens__c</fullName>
        <description>Number of open emails for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of open emails for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Recipients__c</fullName>
        <description>Number of recipients for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of recipients for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Recipients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Spam_Complaints__c</fullName>
        <description>Number of Spam Complaints for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of Spam Complaints for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Spam Complaints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Unique_Opens__c</fullName>
        <description>Number of unique open emails for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of unique open emails for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Unique Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Unsubscribed__c</fullName>
        <description>Number of unsubscribes for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of unsubscribes for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Unsubscribed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__World_View_Email_Tracking__c</fullName>
        <description>World view of the email campaign tracking.</description>
        <inlineHelpText>World view of the email campaign tracking.</inlineHelpText>
        <label>World View Email Tracking</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllActiveInactiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SBU__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Referral_Campaigns</fullName>
        <columns>Channel_ManagerEMAIL__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Distributor_Level__c</columns>
        <columns>Referral_Contact__c</columns>
        <columns>Referral_Contact_Email__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Markets_Customers_Served__c</columns>
        <columns>State_of_Operation__c</columns>
        <columns>Number_of_Members__c</columns>
        <columns>Capabilities__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Referrals</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Referral Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Referral_CampaignsAI</fullName>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Channel_ManagerEMAIL__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Distributor_Level__c</columns>
        <columns>Referral_Contact__c</columns>
        <columns>Referral_Contact_Email__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Markets_Customers_Served__c</columns>
        <columns>State_of_Operation__c</columns>
        <columns>Number_of_Members__c</columns>
        <columns>Capabilities__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Referrals</value>
        </filters>
        <label>Referral Campaigns Active and Inactive</label>
    </listViews>
    <recordTypes>
        <fullName>Marketing_Campaigns</fullName>
        <active>true</active>
        <label>Marketing Campaigns</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referrals</fullName>
        <active>true</active>
        <label>Referrals</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>